Add UseCGroupsLimits in JAVA_OPTS and new che-server-timeout-ms cm